[deaton] Lumped updates. Includes fix to indexing error on kymograph dataframes that caused image misassignment to metadata.

--- a/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2020-07-31_mVenus_KO_cloning/2020-07-31_cleaned_up.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2020-07-31_mVenus_KO_cloning/2020-07-31_cleaned_up.ipynb
@@ -21,8 +21,7 @@
     "import numpy as np\n",
     "\n",
     "from Bio import SeqIO\n",
-    "from Bio.Seq import Seq\n",
-    "from Bio.Alphabet import IUPAC"
+    "from Bio.Seq import Seq"
    ]
   },
   {
@@ -38,6 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Finds all PAMs on a strand of a sequence record\n",
+    "## strand specifies the strand (1,-1) that the search is being conducted on\n",
+    "## startcoord specifies the beginning coordinate of the seqrecord on the underlying reference genome\n",
     "def find_strand_pams(seqrecord, strand, startcoord=0):\n",
     "    if strand == 1:\n",
     "        seq = str(seqrecord.seq)\n",
@@ -66,6 +68,9 @@
     "    return pam_list\n",
     "\n",
     "\n",
+    "## Finds all PAMs in target sequence record\n",
+    "## startcoord specifies the beginning coordinate of the seqrecord on the underlying reference genome\n",
+    "## target_strand specifies the strand (1,-1) that the seq record is on\n",
     "def find_pams(seqrecord, startcoord=0, target_strand=1):\n",
     "    fwd_pams = find_strand_pams(seqrecord, 1, startcoord=startcoord)\n",
     "    rev_pams = find_strand_pams(seqrecord, -1, startcoord=startcoord)\n",
@@ -79,25 +84,30 @@
     "    return pam_df\n",
     "\n",
     "\n",
+    "## Uses a reference csv of bad seeds to eliminate bad seeds from the PAM DataFrame\n",
     "def remove_bad_seeds(pam_df, bad_seed_path):\n",
     "    bad_seed_df = pd.read_csv(bad_seed_path)\n",
     "    bad_seed_list = bad_seed_df[\"seeds\"].tolist()\n",
     "    ## reverse complement to match target sequence\n",
     "    bad_seed_list = [\n",
-    "        str(Seq(item.upper(), IUPAC.unambiguous_dna).reverse_complement())\n",
-    "        for item in bad_seed_list\n",
+    "        str(Seq(item.upper()).reverse_complement()) for item in bad_seed_list\n",
     "    ]\n",
     "\n",
     "    pam_df = pam_df[pam_df[\"sequence\"].apply(lambda x: x[:5] not in bad_seed_list)]\n",
     "    return pam_df\n",
     "\n",
     "\n",
+    "## Converts a string to an integer representation\n",
     "def str_to_int(string):\n",
     "    code = {\"A\": 0, \"C\": 1, \"G\": 2, \"T\": 3}\n",
     "    conv_str = np.array(list(map(lambda x: code[x], string)))\n",
     "    return conv_str\n",
     "\n",
     "\n",
+    "## Determines the maximum matching (minimum edit distance) of each target sequence\n",
+    "## to sequences in the reference\n",
+    "## subseq_range can be set to subset the sequences to a region of interest (i.e. the PAM adjacent region)\n",
+    "## remove_matching_starts can be set to eliminate sequences from consideration when they are at the same location\n",
     "def compare_seqs(\n",
     "    target_df, reference_df, subseq_range=None, remove_matching_starts=True\n",
     "):\n",
@@ -123,6 +133,7 @@
     "    return most_agreement\n",
     "\n",
     "\n",
+    "### Exhaustively generate mismatched versions of the query with num_mismatch substitutions starting from the PAM distal end\n",
     "def generate_all_mismatchs(in_str, num_mismatch):\n",
     "    flip_dict = {\n",
     "        \"A\": [\"T\", \"C\", \"G\"],\n",
@@ -130,11 +141,17 @@
     "        \"C\": [\"T\", \"A\", \"G\"],\n",
     "        \"G\": [\"T\", \"C\", \"A\"],\n",
     "    }\n",
-    "    prod = list(itertools.product(*[flip_dict[in_str[i]] for i in range(num_mismatch)]))\n",
-    "    new_strs = [\"\".join(item) + in_str[num_mismatch:] for item in prod]\n",
+    "    in_str_len = len(in_str)\n",
+    "    prod = list(\n",
+    "        itertools.product(\n",
+    "            *[flip_dict[in_str[in_str_len - i - 1]] for i in range(num_mismatch)][::-1]\n",
+    "        )\n",
+    "    )\n",
+    "    new_strs = [in_str[: in_str_len - num_mismatch] + \"\".join(item) for item in prod]\n",
     "    return new_strs\n",
     "\n",
     "\n",
+    "### Randomly (with replacement) generate mismatched versions of the query with num_mismatch substitutions\n",
     "def generate_mismatch(in_str, num_mismatch):\n",
     "    flip_dict = {\n",
     "        \"A\": [\"T\", \"C\", \"G\"],\n",
@@ -142,16 +159,19 @@
     "        \"C\": [\"T\", \"A\", \"G\"],\n",
     "        \"G\": [\"T\", \"C\", \"A\"],\n",
     "    }\n",
+    "    in_str_len = len(in_str)\n",
     "    list_str = list(in_str)\n",
     "    new_str = copy.copy(list_str)\n",
     "    for i in range(num_mismatch):\n",
-    "        new_char = np.random.choice(flip_dict[list_str[i]])\n",
-    "        new_str[i] = new_char\n",
+    "        new_char = np.random.choice(flip_dict[list_str[in_str_len - i - 1]])\n",
+    "        new_str[in_str_len - i - 1] = new_char\n",
     "    new_str = \"\".join(new_str)\n",
     "    return new_str\n",
     "\n",
     "\n",
-    "def generate_mismatch_df(pam_df, k=[1, 2, 4, 8, 10], n_samples=50):\n",
+    "### Generate a mismatch DataFrame with PAMs containing k[i] mismatches, taking n_samples for each k[i]\n",
+    "### If k[i]<max_exhaustive, then this is done exhaustively\n",
+    "def generate_mismatch_df(pam_df, k=[1, 2, 4, 8, 10], n_samples=50, max_exhaustive=5):\n",
     "    mismatch_df = []\n",
     "    for i, row in pam_df.iterrows():\n",
     "        seq = row[\"sequence\"]\n",
@@ -161,7 +181,7 @@
     "        target_strand = row[\"target_strand\"]\n",
     "        mismatch_df.append([start, end, seq, ref_strand, target_strand, 0])\n",
     "        for k in [1, 2, 4, 8, 10]:\n",
-    "            if k < 5:\n",
+    "            if k <= max_exhaustive:\n",
     "                mismatch_list = generate_all_mismatchs(seq, k)\n",
     "            else:\n",
     "                mismatch_list = list(\n",
@@ -224,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_pam_df[:10]"
+    "genome_pam_df[:10]"
    ]
   },
   {
@@ -233,9 +253,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_agreement = compare_seqs(target_pam_df, genome_pam_df, range(0, 9))\n",
-    "past_threshold = most_agreement < 9\n",
+    "PAM_adj_size = 10\n",
+    "most_agreement = compare_seqs(target_pam_df, genome_pam_df, range(0, PAM_adj_size))\n",
+    "past_threshold = most_agreement < PAM_adj_size\n",
     "target_pam_df_nooff = target_pam_df[past_threshold]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Percent Past Threshold: \" + str(np.sum(past_threshold) / len(past_threshold)))"
    ]
   },
   {
@@ -253,10 +283,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mismatch_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "promoter_guides_df = mismatch_df[(mismatch_df[\"start\"] > 808496)].reset_index(drop=True)\n",
-    "most_agreement = compare_seqs(promoter_guides_df, genome_pam_df, range(0, 9))\n",
-    "past_threshold = most_agreement < 9\n",
+    "most_agreement = compare_seqs(promoter_guides_df, genome_pam_df, range(0, PAM_adj_size))\n",
+    "past_threshold = most_agreement < PAM_adj_size\n",
     "promoter_guides_df_nooff = promoter_guides_df[past_threshold]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Percent Past Threshold: \" + str(np.sum(past_threshold) / len(past_threshold)))"
    ]
   },
   {
@@ -296,8 +344,8 @@
    "outputs": [],
    "source": [
     "guides_df = mismatch_df[mismatch_df[\"target_strand\"] == 1].reset_index(drop=True)\n",
-    "most_agreement = compare_seqs(guides_df, genome_pam_df, range(0, 9))\n",
-    "past_threshold = most_agreement < 9\n",
+    "most_agreement = compare_seqs(guides_df, genome_pam_df, range(0, PAM_adj_size))\n",
+    "past_threshold = most_agreement < PAM_adj_size\n",
     "guides_df_nooff = guides_df[past_threshold]"
    ]
   },
@@ -307,7 +355,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guides_df"
+    "print(\"Percent Past Threshold: \" + str(np.sum(past_threshold) / len(past_threshold)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_guides = guides_df[guides_df[\"num_mismatch\"] == 0][2:4]"
    ]
   },
   {
@@ -355,13 +412,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Convert a target sequence to a spacer sequence\n",
     "def target_to_spacer(target_str):\n",
-    "    target = Seq(target_str.upper(), IUPAC.unambiguous_dna)\n",
+    "    target = Seq(target_str.upper())\n",
     "    spacer = target.reverse_complement()\n",
     "    spacer = str(spacer)\n",
     "    return spacer\n",
     "\n",
     "\n",
+    "### Add bsai sites and primer sequences to the side for cloning\n",
     "def add_bsaI_sites(spacer):  ##make more general later\n",
     "    site_1 = \"AGGCACTTGCTCGTACGACGGAAGACATTAGT\"\n",
     "    site_2 = \"GTTTTCGTCTTCTTAAGGTGCCGGGCCCACAT\"\n",
@@ -369,6 +428,7 @@
     "    return output_seq\n",
     "\n",
     "\n",
+    "### Convert a target sequence to a spacer with bsai sites and basic PCR primers\n",
     "def target_to_padded_spacer(target_str):\n",
     "    spacer = target_to_spacer(target_str)\n",
     "    padded_spacer = add_bsaI_sites(spacer)\n",
@@ -392,8 +452,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_guides_df.to_csv(\"DE161_guide_df.csv\")"
+    "selected_guides_df.to_csv(\"DE161_extra_guide_df.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_guides[\"sequence_to_order\"] = extra_guides[\"sequence\"].apply(\n",
+    "    target_to_padded_spacer\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_guides.to_csv(\"DE161_extra_guide_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -412,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
