--- a/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2020-09-25_oDEpool3_nanopore_run/initial_notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2020-09-25_oDEpool3_nanopore_run/initial_notebook.ipynb
@@ -576,7 +576,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "minimap2 -ax map-ont -t 8 ref_6.fasta consensus.fasta | samtools sort -o consensus.sorted.bam -T consensus.tmp\n",
+    "\n",
+    "samtools index consensus.sorted.bam"
+   ]
   },
   {
    "cell_type": "code",
@@ -1647,6 +1651,42 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import ast\n",
+    "import numpy as np\n",
+    "\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "fastqlist = [\"reads/readset_0.fastq\", \"reads/readset_1.fastq\"]\n",
+    "print(fastqlist)\n",
+    "record_dict = [\n",
+    "    SeqIO.to_dict(SeqIO.parse(fastqfile, \"fastq\")) for fastqfile in fastqlist\n",
+    "]\n",
+    "record_dict = {key: val for subdict in record_dict for key, val in subdict.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1665,7 +1705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
