[shenker/snakenbake] Fixed FOV angle tolerance calculation. FOV grid visualization now rotates correctly.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -253,7 +253,7 @@
     "        fov_dims,\n",
     "        chip_grid_metadata,\n",
     "        center_margins=True,\n",
-    "        rotate=False,\n",
+    "        rotate=True,\n",
     "    )\n",
     "grid_df = pd.concat(\n",
     "    {\n",
@@ -266,7 +266,7 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 201214.3\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 201215\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
@@ -274,7 +274,7 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/201214.3basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/201215basilisk.gds\")"
    ]
   },
   {
@@ -334,6 +334,13 @@
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
