--- a/paulssonlab/src/paulssonlab/shenker/cloning/210104 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210104 3G.ipynb
@@ -45,7 +45,8 @@
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.golden_gate as golden_gate\n",
-    "import paulssonlab.cloning.registry as registry"
+    "import paulssonlab.cloning.registry as registry\n",
+    "import paulssonlab.cloning.core as core"
    ]
   },
   {
@@ -80,39 +81,6 @@
    "outputs": [],
    "source": [
     "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
-    "# plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
-    "# part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
-    "# part_sequences_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Sequences\")\n",
-    "# oligo_sheet = gc.open_by_key(col[\"oligos\"]).worksheet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drive_service = plasmid_sheet.client.drive.service\n",
-    "# plasmid_folder = col[\"plasmid_maps\"]\n",
-    "# plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
    ]
   },
   {
@@ -189,7 +157,286 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GG"
+    "# PCR simulation test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq1 = \"TTTT\"\n",
+    "seq1a = \"TTTTA\"\n",
+    "seq1b = \"TTTTC\"\n",
+    "seq1c = \"CCCCCCCCCCCTTTTC\"\n",
+    "seq2 = \"AAAATTTTAAAATTTTAAAA\"\n",
+    "seq3 = \"AGTGATTTTTTTCTCCATTCTTTGTGTGTTTTTTTTGTTTTATGAATTTTTTTAACTGATACCCGTTTTTTTGGAAGGAGACCCGTTTTTTTGGAAG\"\n",
+    "seq4 = \"TTTTTTAAAAAAAGGGGGGGGGGGGGGTTTTTTCCCCCCCCCCCCAAAAAAATTTTTTAAAAAAA\"\n",
+    "seq4p = \"GGGGGGGGGGGGGG\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_matching_chars(a, b):\n",
+    "    s = 0\n",
+    "    for i in range(min(len(a), len(b))):\n",
+    "        if a[i] == b[i]:\n",
+    "            s += 1\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "def count_contiguous_matching_chars(a, b, right=False):\n",
+    "    s = 0\n",
+    "    idxs = range(min(len(a), len(b)))\n",
+    "    if right:\n",
+    "        idxs = reversed(idxs)\n",
+    "    for i in idxs:\n",
+    "        if a[i] == b[i]:\n",
+    "            s += 1\n",
+    "        else:\n",
+    "            return s\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "# TODO: LINEAR!!\n",
+    "# TODO: add min_tm option?\n",
+    "def find_primer_binding_site(\n",
+    "    primer, template, linear=False, try_reverse_complement=True, min_score=8\n",
+    "):\n",
+    "    orig_template = template\n",
+    "    if try_reverse_complement:\n",
+    "        senses = (1, -1)\n",
+    "    else:\n",
+    "        senses = (1,)\n",
+    "    sites = []\n",
+    "    for sense in senses:\n",
+    "        if sense == -1:\n",
+    "            template = sequence.reverse_complement(orig_template)\n",
+    "        else:\n",
+    "            template = orig_template\n",
+    "        template_padded = \" \" * (len(primer) - 1) + template + \" \" * (len(primer) - 1)\n",
+    "        for loc in range(1, len(template) + len(primer)):\n",
+    "            score = count_contiguous_matching_chars(\n",
+    "                primer, template_padded[loc - 1 : loc + len(primer) - 1], right=True\n",
+    "            )\n",
+    "            if score >= min_score:\n",
+    "                sites.append((sense, loc, score))\n",
+    "    return sites\n",
+    "\n",
+    "\n",
+    "find_primer_binding_site(seq4p, seq4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.slice_seq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: make work with SeqRecords\n",
+    "# TODO: make sure join_seqs sets topology correctly?\n",
+    "def simulate_pcr(primer1, primer2, template, linear=False, min_score=6):\n",
+    "    both_sites = []\n",
+    "    for primer in (primer1, primer2):\n",
+    "        sites = find_primer_binding_site(\n",
+    "            primer,\n",
+    "            template,\n",
+    "            linear=linear,\n",
+    "            try_reverse_complement=True,\n",
+    "            min_score=min_score,\n",
+    "        )\n",
+    "        if len(sites) != 1:\n",
+    "            raise ValueError(\n",
+    "                f\"expecting a unique primer binding site, instead found {len(sites)}\"\n",
+    "            )\n",
+    "        both_sites.append(sites[0])\n",
+    "    if both_sites[0][0] == -1:\n",
+    "        both_sites = both_sites[::-1]\n",
+    "    sense1, loc1, len1 = both_sites[0]\n",
+    "    sense2, loc2, len2 = both_sites[1]\n",
+    "    if sense1 != -sense2:\n",
+    "        raise ValueError(\"expecting a forward/reverse primer pair\")\n",
+    "    start = loc1\n",
+    "    stop = len(template) - loc2\n",
+    "    amplicon = sequence.slice_seq(template, start, stop)\n",
+    "    product = sequence.join_seqs([primer1, amplicon, primer2])\n",
+    "    return product\n",
+    "\n",
+    "\n",
+    "p1 = \"TTTTTAGAAGA\"\n",
+    "p2 = \"CCCCCAGAGGG\"\n",
+    "seq5 = \"AGAAGACCCCGGGGCCCTCT\"\n",
+    "simulate_pcr(p1, p2, seq5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.reverse_complement(seq5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DsSeqRecord test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DsSeqRecord (store circularity)\n",
+    "# fix linear=/circular= handling\n",
+    "# Registry.get_entry ->\n",
+    "#    {\"_type\": \"plasmid\", \"plasmid\": {row...}, \"plasmid_map\": DsSeqRecord}\n",
+    "# Registry.get_seq -> DsSeqRecord\n",
+    "# re_digest -> DsSeqRecord\n",
+    "# ligate_seqs([seq1, seq2, seq3], method=\"goldengate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### SeqRecord+DsSeq\n",
+    "# - automatic printing (via DsSeq repr)\n",
+    "#### vs. DsSeqRecord+Seq?\n",
+    "# - seqrecord.append (monkeypatch?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.SeqRecord import SeqRecord\n",
+    "from Bio.Seq import Seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Seq(\"aaaagg\" + (\"X\" * 800) + \"ggcccc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hasattr(b, \"complement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sequence.DsSeqRecord(\n",
+    "    Seq(\"aaaagg\" + (\"X\" * 800) + \"ggcccc\"), upstream_overhang=1, downstream_overhang=-2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.reverse_complement())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SeqRecord?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.DsSeqRecord"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GG test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dnacauldron as dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parts = {\n",
+    "    # hhh\n",
+    "}\n",
+    "\n",
+    "repository = dc.SequenceRepository(parts=parts)"
    ]
   },
   {
@@ -240,6 +487,38 @@
    "source": [
     "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
     "    f.write(assembly.format(\"gb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gibson test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gibson two test seqs\n",
+    "# gibson two GG'ed TUs\n",
+    "# check we can PCR UNSes onto JUMP vector\n",
+    "# check we can circularize a real 3G rxn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_join = [\n",
+    "    (seq, storage_enzyme),\n",
+    "    (storage_vector_seq, storage_enzyme),\n",
+    "]\n",
+    "plasmid_map = golden_gate.assemble(to_join, linear=False)"
    ]
   },
   {
