[shenker/cloning,cloning] WIP DsSeqRecord.cut

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210105 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210105 3G.ipynb
@@ -44,9 +44,8 @@
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
-    "import paulssonlab.cloning.golden_gate as golden_gate\n",
     "import paulssonlab.cloning.registry as registry\n",
-    "import paulssonlab.cloning.core as core"
+    "import paulssonlab.cloning.enzyme as enzyme"
    ]
   },
   {
@@ -398,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SeqRecord?"
+    "s = \"GGTCTCAAATGAGCTGTCCTGAACAAATTGTGCAGCTTATGCATATGCATCTTGATGGAGATATCCTTCCAAAAGATGAACACGTATTAAATGAACATCTGGAGACATGCGAGAAATGCAGAAAGCATTTTTACGAGATGGAGAAATCCATAGCGCTCGTACGGAGCACATCGCATGTCGAAGCCCCCGCGGATTTTACCGCTAATGTCATGGCAAAATTGCCTAAGGAGAAGAAAAGAGCTTCTGTAAAAAGATGGTTCAGAACCCATTAAaggtTGAGACC\""
    ]
   },
   {
@@ -407,7 +406,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence.DsSeqRecord"
+    "seq = Seq(s)\n",
+    "seq = sequence.DsSeqRecord(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuts = enzyme.re_search(seq, Restriction.BsaI, circular=False)\n",
+    "cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuts = [(0, 0, True), *cuts, (len(seq), len(seq), True)]\n",
+    "cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqs = []\n",
+    "for cut1, cut2 in zip(cuts[:-1], cuts[1:]):\n",
+    "    min(cut1[:2])\n",
+    "    upstream_overhang = cut1[0] - cut1[1]\n",
+    "    seqs.append()\n",
+    "# return list of seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sequence.DsSeqRecord(Seq(\"aaaagg\" + (\"X\" * 8) + \"ggcccc\"), circular=False)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(range(10))[slice(-1, None)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dna in a.cut(1, -3):\n",
+    "    print(\"---\")\n",
+    "    print(dna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dna in a.cut(1, 2):\n",
+    "    print(\"---\")\n",
+    "    print(dna)"
    ]
   },
   {
