[cloning,shenker/cloning] DsSeqRecord.cut works.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210105 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210105 3G.ipynb
@@ -450,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = sequence.DsSeqRecord(Seq(\"aaaagg\" + (\"X\" * 8) + \"ggcccc\"), circular=False)\n",
+    "a = sequence.DsSeqRecord(Seq(\"aaaagg\" + (\"X\" * 8) + \"ggcccc\"), circular=True)\n",
     "print(a)"
    ]
   },
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for dna in a.cut(1, -3):\n",
+    "for dna in a.cut(2, 3):\n",
     "    print(\"---\")\n",
     "    print(dna)"
    ]
@@ -480,7 +480,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for dna in a.cut(1, 2):\n",
+    "for dna in a.cut(2, 3):\n",
+    "    print(\"---\")\n",
+    "    print(dna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3\n",
+    "print((2 - x, 3 - x))\n",
+    "for dna in a.reindex(x).cut(2 - x, 3 - x):\n",
+    "    print(\"---\")\n",
+    "    print(dna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3\n",
+    "print((2 - x, 3 - x))\n",
+    "for dna in a.reindex(x).cut(3 - x, 2 - x):\n",
     "    print(\"---\")\n",
     "    print(dna)"
    ]
