[shenker/cloning,cloning] DsSeqRecord.cut works. Decided that instead of implementing a bunch of corner cases correctly, we should raise an exception if attempting to cut where a strand is absent.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
@@ -397,7 +397,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = \"GGTCTCAAATGAGCTGTCCTGAACAAATTGTGCAGCTTATGCATATGCATCTTGATGGAGATATCCTTCCAAAAGATGAACACGTATTAAATGAACATCTGGAGACATGCGAGAAATGCAGAAAGCATTTTTACGAGATGGAGAAATCCATAGCGCTCGTACGGAGCACATCGCATGTCGAAGCCCCCGCGGATTTTACCGCTAATGTCATGGCAAAATTGCCTAAGGAGAAGAAAAGAGCTTCTGTAAAAAGATGGTTCAGAACCCATTAAaggtTGAGACC\""
+    "s = \"GGTCTCAaatgAGCTGTCCTGAACAAATTGTGCAGCTTATGCATATGCATCTTGATGGAGATATCCTTCCAAAAGATGAACACGTATTAAATGAACATCTGGAGACATGCGAGAAATGCAGAAAGCATTTTTACGAGATGGAGAAATCCATAGCGCTCGTACGGAGCACATCGCATGTCGAAGCCCCCGCGGATTTTACCGCTAATGTCATGGCAAAATTGCCTAAGGAGAAGAAAAGAGCTTCTGTAAAAAGATGGTTCAGAACCCATTAAaggtTGAGACC\"\n",
+    "s = \"GGTCTCAaaaaGGTCTCAccccGGTCTCAggggGGTCTCAttttgggg\"\n",
+    "dsdna = Seq(s)\n",
+    "dsdna = sequence.DsSeqRecord(frag, circular=True)"
    ]
   },
   {
@@ -406,8 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq = Seq(s)\n",
-    "seq = sequence.DsSeqRecord(seq)"
+    "for dna in enzyme.re_digest(dsdna, Restriction.BsaI):\n",
+    "    print(dna)"
    ]
   },
   {
@@ -416,8 +419,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuts = enzyme.re_search(seq, Restriction.BsaI, circular=False)\n",
+    "cuts = enzyme.re_search(dsdna, Restriction.BsaI)\n",
     "cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remainder = frag.reindex(0)\n",
+    "cuts = enzyme.re_search(remainder, Restriction.BsaI)\n",
+    "seqs = []\n",
+    "offset = 0\n",
+    "for cut in cuts:\n",
+    "    print(\"cutting>\", cut, \"|\", cut[0] - offset, cut[1] - offset)\n",
+    "    print(\"offset>>\", offset)\n",
+    "    print()\n",
+    "    print(\"******\")\n",
+    "    print(remainder)\n",
+    "    print(\"******\")\n",
+    "    print()\n",
+    "    frags, new_offset = remainder.cut(cut[0] - offset, cut[1] - offset)\n",
+    "    for seq in frags:\n",
+    "        print(\"---\")\n",
+    "        print(seq)\n",
+    "    remainder = frags[-1]\n",
+    "    offset += new_offset\n",
+    "    # offset += abs(remainder.upstream_overhang) + abs(remainder.downstream_overhang)#max(cut[0], cut[1])# - 2\n",
+    "    #     if new_offset != 0:\n",
+    "    #         offset = new_offset\n",
+    "    #     else:\n",
+    "    #         offset += max(cut[0], cut[1]) + abs(frags[-1].upstream_overhang)\n",
+    "    #     seqs.extend(frags[:-1])\n",
+    "    #     remainder = frags[-1]\n",
+    "    print(\"========\")\n",
+    "    print()\n",
+    "# seqs.append(remainder)\n",
+    "# seqs = seqs[1:]\n",
+    "for seq in seqs:\n",
+    "    print(\"---\")\n",
+    "    print(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cut in cuts:\n",
+    "    frags, _ = frag.cut(cut[0], cut[1])\n",
+    "    for seq in frags:\n",
+    "        print(\"---\")\n",
+    "        print(seq)"
    ]
   },
   {
