[cloning,shenker/cloning] re_digest and DsSeqRecord.digest work.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
@@ -399,8 +399,28 @@
    "source": [
     "s = \"GGTCTCAaatgAGCTGTCCTGAACAAATTGTGCAGCTTATGCATATGCATCTTGATGGAGATATCCTTCCAAAAGATGAACACGTATTAAATGAACATCTGGAGACATGCGAGAAATGCAGAAAGCATTTTTACGAGATGGAGAAATCCATAGCGCTCGTACGGAGCACATCGCATGTCGAAGCCCCCGCGGATTTTACCGCTAATGTCATGGCAAAATTGCCTAAGGAGAAGAAAAGAGCTTCTGTAAAAAGATGGTTCAGAACCCATTAAaggtTGAGACC\"\n",
     "s = \"GGTCTCAaaaaGGTCTCAccccGGTCTCAggggGGTCTCAttttgggg\"\n",
-    "dsdna = Seq(s)\n",
-    "dsdna = sequence.DsSeqRecord(frag, circular=True)"
+    "# s = \"GGTCTCAaaaaGGTCTAAccccGGTCTAAggggGGTCTAAttttgggg\"\n",
+    "seq = Seq(s)\n",
+    "dsdna = sequence.DsSeqRecord(seq, circular=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_search(dsdna, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dna in dsdna.digest(Restriction.BsaI):\n",
+    "    print(repr(dna))"
    ]
   },
   {
@@ -410,7 +430,7 @@
    "outputs": [],
    "source": [
     "for dna in enzyme.re_digest(dsdna, Restriction.BsaI):\n",
-    "    print(dna)"
+    "    print(repr(dna))"
    ]
   },
   {
