--- a/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
@@ -319,18 +319,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### SeqRecord+DsSeq\n",
-    "# - automatic printing (via DsSeq repr)\n",
-    "#### vs. DsSeqRecord+Seq?\n",
-    "# - seqrecord.append (monkeypatch?)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from Bio.SeqRecord import SeqRecord\n",
     "from Bio.Seq import Seq"
    ]
@@ -419,28 +407,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for dna in dsdna.digest(Restriction.BsaI):\n",
-    "    print(repr(dna))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for dna in enzyme.re_digest(dsdna, Restriction.BsaI):\n",
     "    print(repr(dna))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cuts = enzyme.re_search(dsdna, Restriction.BsaI)\n",
-    "cuts"
+    "# Append test"
    ]
   },
   {
@@ -449,38 +424,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remainder = frag.reindex(0)\n",
-    "cuts = enzyme.re_search(remainder, Restriction.BsaI)\n",
-    "seqs = []\n",
-    "offset = 0\n",
-    "for cut in cuts:\n",
-    "    print(\"cutting>\", cut, \"|\", cut[0] - offset, cut[1] - offset)\n",
-    "    print(\"offset>>\", offset)\n",
-    "    print()\n",
-    "    print(\"******\")\n",
-    "    print(remainder)\n",
-    "    print(\"******\")\n",
-    "    print()\n",
-    "    frags, new_offset = remainder.cut(cut[0] - offset, cut[1] - offset)\n",
-    "    for seq in frags:\n",
-    "        print(\"---\")\n",
-    "        print(seq)\n",
-    "    remainder = frags[-1]\n",
-    "    offset += new_offset\n",
-    "    # offset += abs(remainder.upstream_overhang) + abs(remainder.downstream_overhang)#max(cut[0], cut[1])# - 2\n",
-    "    #     if new_offset != 0:\n",
-    "    #         offset = new_offset\n",
-    "    #     else:\n",
-    "    #         offset += max(cut[0], cut[1]) + abs(frags[-1].upstream_overhang)\n",
-    "    #     seqs.extend(frags[:-1])\n",
-    "    #     remainder = frags[-1]\n",
-    "    print(\"========\")\n",
-    "    print()\n",
-    "# seqs.append(remainder)\n",
-    "# seqs = seqs[1:]\n",
-    "for seq in seqs:\n",
-    "    print(\"---\")\n",
-    "    print(seq)"
+    "seq = workflow.read_sequence(\n",
+    "    open(\n",
+    "        \"/Users/jacob/Google Drive/Paulsson shared/Documents/FISH/example_construct.gb\"\n",
+    "    ).read()\n",
+    ")"
    ]
   },
   {
@@ -489,11 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cut in cuts:\n",
-    "    frags, _ = frag.cut(cut[0], cut[1])\n",
-    "    for seq in frags:\n",
-    "        print(\"---\")\n",
-    "        print(seq)"
+    "seq"
    ]
   },
   {
@@ -502,8 +446,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuts = [(0, 0, True), *cuts, (len(seq), len(seq), True)]\n",
-    "cuts"
+    "seq = sequence.DsSeqRecord(seq)\n",
+    "seq"
    ]
   },
   {
@@ -512,79 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs = []\n",
-    "for cut1, cut2 in zip(cuts[:-1], cuts[1:]):\n",
-    "    min(cut1[:2])\n",
-    "    upstream_overhang = cut1[0] - cut1[1]\n",
-    "    seqs.append()\n",
-    "# return list of seqs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sequence.DsSeqRecord(Seq(\"aaaagg\" + (\"X\" * 8) + \"ggcccc\"), circular=True)\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(range(10))[slice(-1, None)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dna in a.cut(2, 3):\n",
-    "    print(\"---\")\n",
-    "    print(dna)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dna in a.cut(2, 3):\n",
-    "    print(\"---\")\n",
-    "    print(dna)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 3\n",
-    "print((2 - x, 3 - x))\n",
-    "for dna in a.reindex(x).cut(2 - x, 3 - x):\n",
-    "    print(\"---\")\n",
-    "    print(dna)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 3\n",
-    "print((2 - x, 3 - x))\n",
-    "for dna in a.reindex(x).cut(3 - x, 2 - x):\n",
-    "    print(\"---\")\n",
-    "    print(dna)"
+    "seq.features"
    ]
   },
   {
