[cloning,shenker/cloning] DsSeqRecord.__add__ now merges abutting identical sequence features.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210107 3G.ipynb
@@ -456,7 +456,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq.features"
+    "x = seq[:200].features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x._shift??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq[:200].features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 200\n",
+    "len((seq[:x] + seq[x:]).features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(seq.features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 2733\n",
+    "for a, b in zip(seq.features, (seq[:x] + seq[x:]).features):\n",
+    "    print(a.location, b.location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = seq.features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.__class__??"
    ]
   },
   {
