[shenker/snakenbake] Add back old chip pressure calculations.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -336,11 +336,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old chip calculations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(\n",
+    "    Q_per_snake\n",
+    "    * mu\n",
+    "    * fluid.snake_resistance(\n",
+    "        80 * u.um,\n",
+    "        {\"snake_length\": [17920 * 19], \"feeding_channel_width\": 90},\n",
+    "        length_unit=u.um,\n",
+    "    )\n",
+    ").to(u.bar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    Q_per_snake\n",
+    "    * mu\n",
+    "    * fluid.snake_resistance(\n",
+    "        80 * u.um,\n",
+    "        {\"snake_length\": [17920 * 25], \"feeding_channel_width\": 45},\n",
+    "        length_unit=u.um,\n",
+    "    )\n",
+    ").to(u.bar)"
+   ]
   }
  ],
  "metadata": {
