[deaton] Some minor changes and syncing dev notebooks.

--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2020-11-28_snakemake_2020-11-23_lDE13/analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2020-11-28_snakemake_2020-11-23_lDE13/analysis.ipynb
@@ -334,12 +334,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test = pd.read_csv(\"./lDE13_final_df.tsv\", delimiter=\"\\t\", index_col=0)"
+    "#### Checking Dropout"
    ]
   },
   {
@@ -348,7 +346,207 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test"
+    "sgRNA_lib_df = pd.read_csv(\"./2020-11-01_mVenus_library_1.csv\")\n",
+    "sgRNA_lib_df = sgRNA_lib_df.set_index(\"sequence\")\n",
+    "sgRNA_lib_df = sgRNA_lib_df.rename(columns={\"Unnamed: 0\": \"sgrnaid\"})\n",
+    "output_df = pd.read_csv(\"./lDE13_final_df.tsv\", delimiter=\"\\t\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed_targetids = sorted(list(output_df[\"targetid\"].unique()))\n",
+    "possible_targetids = sorted(list(sgRNA_lib_df[\"targetid\"].unique()))\n",
+    "print(set(possible_targetids) - set(observed_targetids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed_sgrnaids = sorted(list(output_df[\"sgrnaid\"].unique()))\n",
+    "possible_sgrnaids = sorted(list(sgRNA_lib_df[\"sgrnaid\"].unique()))\n",
+    "print(len(set(possible_sgrnaids) - set(observed_sgrnaids)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ah so the targetids that are not there were filtered out in the original list. So this is OK."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgrna_freq = output_df.groupby(\"sgrnaid\").size()\n",
+    "target_freq = output_df.groupby(\"targetid\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(sgrna_freq, range=(0, 40), bins=41)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.hist(target_freq, range=(0, 400))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Median sgRNA Frequency: \" + str(np.median(sgrna_freq)))\n",
+    "print(\"10th Percentile Frequency: \" + str(np.percentile(sgrna_freq, 10)))\n",
+    "print(\"20th Percentile Frequency: \" + str(np.percentile(sgrna_freq, 20)))\n",
+    "print(\"Mean sgRNA Frequency: \" + str(np.mean(sgrna_freq)))\n",
+    "print(\n",
+    "    \"sgRNA Dropout Rate: \"\n",
+    "    + str(\n",
+    "        (len(set(possible_sgrnaids) - set(observed_sgrnaids)))\n",
+    "        / len(set(possible_sgrnaids))\n",
+    "    )\n",
+    ")\n",
+    "print(\" \")\n",
+    "print(\"Median targetid Frequency: \" + str(np.median(target_freq)))\n",
+    "print(\"10th Percentile Frequency: \" + str(np.percentile(target_freq, 10)))\n",
+    "print(\"20th Percentile Frequency: \" + str(np.percentile(target_freq, 20)))\n",
+    "print(\"Mean targetid Frequency: \" + str(np.mean(target_freq)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is really bad uniformity. I need to try a new protocol for the recovery of the library. Probably need to redo some of the GFP +/- stuff as well?\n",
+    "\n",
+    "Also need to make sure PCR cycling is optimized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(target_freq, 10) / np.mean(target_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2020-11-23_lDE13_sequencing/graph_output/inv_codebook.tsv\",\n",
+    "    delimiter=\"\\t\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "barcode_freq = data.apply(lambda x: len(x[\"readlist\"]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(barcode_freq, range=(0, 50000), bins=100)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(barcode_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.median(barcode_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(barcode_freq, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(barcode_freq, 10) / np.mean(barcode_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(target_freq, 10) / np.mean(target_freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost an order of magnitude loss on the sgRNAs compared to the barcodes...ouch\n",
+    "\n",
+    "Next time: Optimize PCR conditions for the sgRNAs, try to get very high effeciency to reduce bias from the bottleneck, and consider plating (as a last resort)."
    ]
   },
   {
