--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2020-10-20_snakemake_2020-10-14_lDE11_R10-3_merged_final/2021-01-10_final_analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2020-10-20_snakemake_2020-10-14_lDE11_R10-3_merged_final/2021-01-10_final_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,30 +26,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def align_read(querystr,cigarstr,pattern=re.compile(\"[0-9]{0,10}[MDI]\")):\n",
-    "#     result = pattern.finditer(cigarstr)\n",
-    "#     cigar_seq = [(item.group(0)[-1],int(item.group(0)[:-1])) for item in result]\n",
-    "# #     output_str = \"\".join([\"-\" for i in range(cigar[1])])\n",
-    "#     output_str = \"\"\n",
-    "#     current_idx = 0\n",
-    "#     for item in cigar_seq:\n",
-    "#         if item[0]==\"M\":\n",
-    "#             added_str = querystr[current_idx:current_idx+item[1]]\n",
-    "#             output_str += added_str\n",
-    "#             current_idx += item[1]\n",
-    "#         elif item[0]==\"D\":\n",
-    "#             added_str = \"\".join([\"-\" for i in range(item[1])])\n",
-    "#             output_str += added_str\n",
-    "#         elif item[0]==\"I\":\n",
-    "#             current_idx += item[1]\n",
-    "#     return output_str\n",
-    "\n",
-    "\n",
     "def cigarsfromsam(samfilepath):\n",
     "    cigars = {}\n",
     "    with open(samfilepath, \"r\") as samfile:\n",
@@ -95,7 +90,6 @@
     "    start_pos = startpos - 1  ##comes as 1 indexed from minimap\n",
     "    result = pattern.finditer(cigarstr)\n",
     "    cigar_seq = [(item.group(0)[-1], int(item.group(0)[:-1])) for item in result]\n",
-    "    #     output_str = \"\".join([\"-\" for i in range(cigar[1])])\n",
     "    output_str = \"\"\n",
     "    if start_pos > 0:\n",
     "        output_str += \"\".join([\"-\" for i in range(start_pos)])\n",
@@ -143,47 +137,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Library Statistics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Import data from nanopore snakemake pipeline\n",
     "R10_data = pd.read_csv(\n",
     "    \"/home/de64/scratch/de64/2020-10-20_snakemake_2020-10-14_lDE11_R10-3_merged_final/output.tsv\",\n",
     "    delimiter=\"\\t\",\n",
     ")\n",
-    "ref_intervals = get_ref_intervals(\n",
-    "    \"/home/de64/scratch/de64/2020-10-20_snakemake_2020-10-14_lDE11_R10-3_merged_final/ref.gfa\"\n",
-    ")\n",
-    "R10_barcodes = set(R10_data[\"barcode\"].tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "## Get set of all observed barcodes\n",
+    "R10_barcodes = set(R10_data[\"barcode\"].tolist())\n",
+    "\n",
+    "## Convert barcodes into array format\n",
     "bit_arr = np.array([list(item) for item in R10_barcodes]).astype(int)\n",
-    "bit_freq = np.mean(bit_arr, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(bit_freq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bit_arr"
+    "\n",
+    "## Get frequency of the ON state for each bit\n",
+    "bit_freq = np.mean(bit_arr, axis=0)\n",
+    "\n",
+    "## Determine the barcode hamming distance to the closest match for each observed barcode\n",
+    "both_on = bit_arr @ bit_arr.T\n",
+    "both_off = (-bit_arr + 1) @ (-bit_arr.T + 1)\n",
+    "ttl_match = both_on + both_off\n",
+    "np.fill_diagonal(ttl_match, 100)\n",
+    "closest_match = np.min(ttl_match, axis=0)\n",
+    "\n",
+    "## Assign closest match to each barcode (for costructing output df later)\n",
+    "closest_match_dict = {\n",
+    "    barcode: closest_match[k] for k, barcode in enumerate(R10_barcodes)\n",
+    "}"
    ]
   },
   {
@@ -198,54 +189,29 @@
     "plt.ylabel(\"Percent Positive\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_1.png\", dpi=300, bbox_inches=\"tight\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "both_on = bit_arr @ bit_arr.T\n",
-    "both_off = (-bit_arr + 1) @ (-bit_arr.T + 1)\n",
-    "ttl_match = both_on + both_off\n",
-    "np.fill_diagonal(ttl_match, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closest_match = np.min(ttl_match, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "# plt.savefig(\"./figure_1.png\",dpi=300,bbox_inches=\"tight\")\n",
+    "\n",
     "plt.hist(closest_match, range=(0, 10))\n",
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_2.png\", dpi=300, bbox_inches=\"tight\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "# plt.savefig(\"./figure_2.png\",dpi=300,bbox_inches=\"tight\")\n",
+    "\n",
     "plt.hist(closest_match, range=(0, 2), bins=3)\n",
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks([0.25, 1.0, 1.75], [0, 1, 2], fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_3.png\", dpi=300, bbox_inches=\"tight\")"
+    "plt.show()\n",
+    "# plt.savefig(\"./figure_3.png\",dpi=300,bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Call GFP and Make Output DF"
    ]
   },
   {
@@ -254,27 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.sum(closest_match == 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(\n",
-    "    np.random.choice(ttl_match.flatten(), 50000, replace=False), range=(0, 27), bins=27\n",
-    ")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Align consensus sequence to reference using cigar string\n",
     "aligned_cons = R10_data.apply(\n",
     "    lambda x: align_read(\n",
     "        x[\"consensus\"], x[\"reference\"], x[\"cigar\"], startpos=x[\"alignmentstart\"]\n",
@@ -283,6 +229,12 @@
     ")\n",
     "R10_data[\"aligned_cons\"] = aligned_cons\n",
     "\n",
+    "## Use GFA reference to determine intervals for each annotation\n",
+    "ref_intervals = get_ref_intervals(\n",
+    "    \"/home/de64/scratch/de64/2020-10-20_snakemake_2020-10-14_lDE11_R10-3_merged_final/ref.gfa\"\n",
+    ")\n",
+    "\n",
+    "## Split sequences based on annotated intervals\n",
     "split_ref = R10_data.apply(lambda x: splitstr(x[\"reference\"], ref_intervals), axis=1)\n",
     "split_align = R10_data.apply(\n",
     "    lambda x: splitstr(x[\"aligned_cons\"], ref_intervals), axis=1\n",
@@ -290,11 +242,13 @@
     "R10_data[\"split_ref\"] = split_ref\n",
     "R10_data[\"split_align\"] = split_align\n",
     "\n",
+    "## Compute hamming distance from reference, by annotated element\n",
     "hamm_ref = R10_data.apply(\n",
     "    lambda x: get_dict_dist(x[\"split_align\"], x[\"split_ref\"]), axis=1\n",
     ")\n",
     "R10_data[\"hamm_ref\"] = hamm_ref\n",
     "\n",
+    "## Get hamming distance from reference of the nucleotides which vary in the library, to determine GFP vs DarkGFP\n",
     "dark_gfp = (\n",
     "    R10_data.apply(\n",
     "        lambda x: slow_hamming_distance(\n",
@@ -304,7 +258,15 @@
     "    )\n",
     "    > 0\n",
     ")\n",
-    "R10_data[\"dark_gfp\"] = dark_gfp"
+    "R10_data[\"dark_gfp\"] = dark_gfp\n",
+    "\n",
+    "## Assign closest match to each barcode (for costructing output df later)\n",
+    "R10_data[\"Closest Hamming Distance\"] = R10_data[\"barcode\"].apply(\n",
+    "    lambda x: closest_match_dict[x]\n",
+    ")\n",
+    "\n",
+    "## Dropping leftover column\n",
+    "del R10_data[\"Unnamed: 0\"]"
    ]
   },
   {
@@ -320,49 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sanger Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio import SeqIO\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "record = SeqIO.read(\"./ab1_files/lDE11_validation_sample_1-oDE154.ab1\", \"abi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_sanger(seq_record, start=0, end=-1, figsize=(18, 8)):\n",
-    "    fig = plt.figure(figsize=figsize)\n",
-    "\n",
-    "    channels = [\"DATA9\", \"DATA10\", \"DATA11\", \"DATA12\"]\n",
-    "    trace = {}\n",
-    "    for c in channels:\n",
-    "        trace[c] = seq_record.annotations[\"abif_raw\"][c]\n",
-    "\n",
-    "    plt.plot(trace[\"DATA9\"][start * 10 : end * 10], color=\"blue\")\n",
-    "    plt.plot(trace[\"DATA10\"][start * 10 : end * 10], color=\"red\")\n",
-    "    plt.plot(trace[\"DATA11\"][start * 10 : end * 10], color=\"green\")\n",
-    "    plt.plot(trace[\"DATA12\"][start * 10 : end * 10], color=\"yellow\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_sanger(record, 50, 100)"
+    "### Sanger Validation"
    ]
   },
   {
@@ -391,6 +311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Align to GAF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -400,14 +327,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get cigar strings, barcodes and read sequences for each isolate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import numpy as np\n",
-    "\n",
     "cigar_dict = {}\n",
     "with open(\"./ab1_files/aligned.gaf\", \"r\") as infile:\n",
     "    for line in infile:\n",
@@ -449,71 +380,24 @@
     "\n",
     "with open(\"./ab1_files/merged.fastq\", \"r\") as infile:\n",
     "    read_dict = SeqIO.parse(infile, \"fastq\")\n",
-    "    read_dict = SeqIO.to_dict(read_dict)\n",
+    "    read_dict = SeqIO.to_dict(read_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get agreement between reads and nanopore calls at GFP/DarkGFP site"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R10_data = pd.read_csv(\"./lDE11_final_df.tsv\", sep=\"\\t\")\n",
     "\n",
-    "# barcode_dict = [\n",
-    "#     {\"readname\": key, \"barcode\": val, \"cigar\": cigar_dict[key]}\n",
-    "#     for key, val in barcode_dict.items()\n",
-    "# ]\n",
-    "\n",
-    "# keys = [\"readname\", \"barcode\", \"cigar\"]\n",
-    "# with open(snakemake.output[0], \"w\") as outfile:\n",
-    "#     dict_writer = csv.DictWriter(outfile, keys, delimiter=\"\\t\")\n",
-    "#     dict_writer.writeheader()\n",
-    "#     dict_writer.writerows(barcode_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cigar_dict[\"lDE11_validation_sample_1-oDE154\"][4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "barcode_dict[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cigar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R10_data = pd.read_csv(\"./lDE11_final_df.tsv\", sep=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R10_data[R10_data[\"barcode\"] == barcode_dict[1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_snp_hamming = []\n",
     "for i in range(1, 97):\n",
     "    if np.sum(R10_data[\"barcode\"] == barcode_dict[i]) == 1:\n",
@@ -537,7 +421,10 @@
     "        snp_hamming = slow_hamming_distance(\n",
     "            split_align[\"GFP\"][623:625], split_consensus[\"GFP\"][623:625]\n",
     "        )\n",
-    "        all_snp_hamming.append(snp_hamming)"
+    "        all_snp_hamming.append(snp_hamming)\n",
+    "all_snp_hamming = np.array(all_snp_hamming)\n",
+    "\n",
+    "print(\"Percent Correct: \" + str(np.sum(all_snp_hamming == 0) / len(all_snp_hamming)))"
    ]
   },
   {
@@ -546,18 +433,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(all_snp_hamming)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "### Determine sanger reads with barcodes not in library\n",
     "ttl_bc = []\n",
     "for i in range(1, 97):\n",
-    "    ttl_bc.append(np.sum(R10_data[\"barcode\"] == barcode_dict[i]))"
+    "    ttl_bc.append(np.sum(R10_data[\"barcode\"] == barcode_dict[i]))\n",
+    "ttl_bc = np.array(ttl_bc)\n",
+    "no_found_barcode_mask = ttl_bc == 0"
    ]
   },
   {
@@ -566,7 +447,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.sum(ttl_bc)"
+    "### Measure average Phred quality of sanger reads\n",
+    "qualities = []\n",
+    "for i in range(1, 97):\n",
+    "    record = SeqIO.read(\n",
+    "        \"./ab1_files/lDE11_validation_sample_\" + str(i) + \"-oDE201.ab1\", \"abi\"\n",
+    "    )\n",
+    "    mean_quality = np.mean(record.letter_annotations[\"phred_quality\"])\n",
+    "    qualities.append(mean_quality)\n",
+    "qualities = np.array(qualities)"
    ]
   },
   {
@@ -575,61 +464,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(ttl_bc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R10_data[R10_data[\"barcode\"] == barcode_dict[i]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(\"011101000101100111101100001\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split_align[\"GFP\"][623:625]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split_ref[\"GFP\"][623:625]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split_consensus[\"GFP\"][623:625]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slow_hamming_distance(split_align[\"GFP\"][623:625], split_consensus[\"GFP\"][623:625])"
+    "### Plot Average Phred quality colored by whether a barcode was in or out of the library\n",
+    "plt.hist(qualities[~no_found_barcode_mask], range=(10, 50), bins=10, label=\"In Library\")\n",
+    "plt.hist(\n",
+    "    qualities[no_found_barcode_mask], range=(10, 50), bins=10, label=\"Out of Library\"\n",
+    ")\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
