[cloning,shenker/cloning] Circularity handling was mostly unnecessary, only need two lines in re_search. Also convert sequence to str in _re_search before adding tail for circular sequences, to bypass non-str (SeqRecord/DsSeqRecord) __add__ behavior (this doesn't cause issues now, but could complain about overhangs/etc.).

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
@@ -181,53 +181,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_matching_chars(a, b):\n",
-    "    s = 0\n",
-    "    for i in range(min(len(a), len(b))):\n",
-    "        if a[i] == b[i]:\n",
-    "            s += 1\n",
-    "    return s\n",
-    "\n",
-    "\n",
-    "def count_contiguous_matching_chars(a, b, right=False):\n",
-    "    s = 0\n",
-    "    idxs = range(min(len(a), len(b)))\n",
-    "    if right:\n",
-    "        idxs = reversed(idxs)\n",
-    "    for i in idxs:\n",
-    "        if a[i] == b[i]:\n",
-    "            s += 1\n",
-    "        else:\n",
-    "            return s\n",
-    "    return s\n",
-    "\n",
-    "\n",
-    "# TODO: LINEAR!!\n",
-    "# TODO: add min_tm option?\n",
-    "def find_primer_binding_site(\n",
-    "    primer, template, linear=False, try_reverse_complement=True, min_score=8\n",
-    "):\n",
-    "    orig_template = template\n",
-    "    if try_reverse_complement:\n",
-    "        senses = (1, -1)\n",
-    "    else:\n",
-    "        senses = (1,)\n",
-    "    sites = []\n",
-    "    for sense in senses:\n",
-    "        if sense == -1:\n",
-    "            template = sequence.reverse_complement(orig_template)\n",
-    "        else:\n",
-    "            template = orig_template\n",
-    "        template_padded = \" \" * (len(primer) - 1) + template + \" \" * (len(primer) - 1)\n",
-    "        for loc in range(1, len(template) + len(primer)):\n",
-    "            score = count_contiguous_matching_chars(\n",
-    "                primer, template_padded[loc - 1 : loc + len(primer) - 1], right=True\n",
-    "            )\n",
-    "            if score >= min_score:\n",
-    "                sites.append((sense, loc, score))\n",
-    "    return sites\n",
-    "\n",
-    "\n",
     "find_primer_binding_site(seq4p, seq4)"
    ]
   },
@@ -246,36 +199,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: make work with SeqRecords\n",
-    "# TODO: make sure join_seqs sets topology correctly?\n",
-    "def simulate_pcr(primer1, primer2, template, linear=False, min_score=6):\n",
-    "    both_sites = []\n",
-    "    for primer in (primer1, primer2):\n",
-    "        sites = find_primer_binding_site(\n",
-    "            primer,\n",
-    "            template,\n",
-    "            linear=linear,\n",
-    "            try_reverse_complement=True,\n",
-    "            min_score=min_score,\n",
-    "        )\n",
-    "        if len(sites) != 1:\n",
-    "            raise ValueError(\n",
-    "                f\"expecting a unique primer binding site, instead found {len(sites)}\"\n",
-    "            )\n",
-    "        both_sites.append(sites[0])\n",
-    "    if both_sites[0][0] == -1:\n",
-    "        both_sites = both_sites[::-1]\n",
-    "    sense1, loc1, len1 = both_sites[0]\n",
-    "    sense2, loc2, len2 = both_sites[1]\n",
-    "    if sense1 != -sense2:\n",
-    "        raise ValueError(\"expecting a forward/reverse primer pair\")\n",
-    "    start = loc1\n",
-    "    stop = len(template) - loc2\n",
-    "    amplicon = sequence.slice_seq(template, start, stop)\n",
-    "    product = sequence.join_seqs([primer1, amplicon, primer2])\n",
-    "    return product\n",
-    "\n",
-    "\n",
     "p1 = \"TTTTTAGAAGA\"\n",
     "p2 = \"CCCCCAGAGGG\"\n",
     "seq5 = \"AGAAGACCCCGGGGCCCTCT\"\n",
@@ -304,12 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DsSeqRecord (store circularity)\n",
-    "# fix linear=/circular= handling\n",
     "# Registry.get_entry ->\n",
     "#    {\"_type\": \"plasmid\", \"plasmid\": {row...}, \"plasmid_map\": DsSeqRecord}\n",
     "# Registry.get_seq -> DsSeqRecord\n",
-    "# re_digest -> DsSeqRecord\n",
     "# ligate_seqs([seq1, seq2, seq3], method=\"goldengate\")"
    ]
   },
@@ -517,15 +437,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.__class__??"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -647,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Command parsing"
+    "# Part expressions test"
    ]
   },
   {
@@ -665,56 +576,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grammar_preamble = \"\"\"@@grammar::CLONING\n",
-    "@@whitespace :: //\"\"\"\n",
-    "\n",
-    "reference_grammar = \"\"\"reference\n",
-    "    =\n",
-    "    | pcr\n",
-    "    | restriction_digest\n",
-    "#    | assembly\n",
-    "    | name\n",
-    "    ;\n",
-    "\n",
-    "name = name:/\\w+/ ;\n",
-    "\n",
-    "pcr = template:reference '~' ~ primer1:name ',' primer2:name ;\n",
-    "\n",
-    "restriction_digest = input:reference '/' ~ enzyme:name ;\n",
-    "\n",
-    "#assembly = assembly+:name {'-' ~ assembly+:name}+ ;\n",
-    "\"\"\"\n",
-    "\n",
-    "grammar = f\"\"\"start = command $ ;\n",
-    "\n",
-    "argument\n",
-    "    =\n",
-    "    | quoted_string\n",
-    "    | command\n",
-    "    | float\n",
-    "    | int\n",
-    "    | lookup\n",
-    "    | reference\n",
-    "    ;\n",
-    "\n",
-    "ws = /\\s*/ ;\n",
-    "\n",
-    "command_name = '@' ~ @:/\\w+/ ;\n",
-    "\n",
-    "command_arglist = '(' ~ ws @+:argument ws {{',' ws @+:argument ws }}* ')' ;\n",
-    "\n",
-    "command = command_name:command_name arguments:command_arglist ;\n",
-    "\n",
-    "quoted_string = '\"' ~ quoted_string:/[^\"]*/ '\"' ;\n",
-    "\n",
-    "float = float:/\\d+\\.\\d+/ ;\n",
-    "\n",
-    "int = int:/\\d+/ ;\n",
-    "\n",
-    "lookup = '$' ~ name ;\n",
-    "\n",
-    "{reference_grammar}\n",
-    "\"\"\""
+    "# digest\n",
+    "# PCR\n",
+    "# annealed oligos\n",
+    "# dsDNA oligo\n",
+    "# construct part seq from spreadsheet if no implementation"
    ]
   },
   {
@@ -723,9 +589,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = tatsu.compile(grammar)\n",
-    "command = \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), pLIB47~oLIB22,oLIB24/BsaI)\"\n",
+    "command = \"pLIB225/BsaI,oLIT0.9=oLIT0.10/BsaI\"\n",
+    "command = \"oLIT9=oLIT10/BsaI\"\n",
+    "###\n",
+    "command = \"oLIT0.9=oLIT0.10\"\n",
+    "command = \"oLIT0.9=oLIT0.10/BsaI\"\n",
+    "command = \"pLIB225<oLIB1,oLIB2>/BsaI\"\n",
+    "# command = \"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\"\n",
+    "# command = \"oLIT1=oLIT2<oLIB1,oLIB2>\"\n",
+    "# command = \"pLIB225/BsaI\"\n",
+    "###\n",
+    "# command = \"oLIT0.9=oLIT0.10,oLIT0.9=oLIT0.10\"\n",
+    "# command = \"oLIT0.9=oLIT0.10/BsaI,oLIT0.9=oLIT0.10/BsaI\"\n",
+    "command = \"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI,oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\"\n",
     "ast = parser.parse(command)\n",
+    "ast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Command parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paulssonlab.cloning.commands as commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commands.expr_parser.parse(\"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commands.expr_parser.parse(\n",
+    "    \"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI,oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commands.command_parser.parse(\n",
+    "    \"@3(foo, bar, baz, oLIT1=oLIT2<oLIB1,oLIB2>/BsaI, oLIT1=oLIT2<oLIB1,oLIB2>/BsaI)\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), pLIB47<oLIB22,oLIB24>/BsaI)\"\n",
+    "ast = commands.command_parser.parse(command)\n",
     "ast"
    ]
   },
